Fix spacing for the Setup your Team area

--- a/app/assets/admin/css/sass/_components.scss
+++ b/app/assets/admin/css/sass/_components.scss
@@ -163,9 +163,12 @@
     overflow-x: hidden;
     overflow-y: auto;
     width: 50%;
+	margin-top: 20px;
 }
 
 .rthd-setup-team-settings {
+	margin-top: 20px;
+
 	.rthd-setup-wizard-row label {
 		width: 45%;
 	}
